typescript/checker/tests/conformance/es6/for-ofStatements/for-of29.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            20,
        ),
        hi: BytePos(
            48,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of29.ts:2:5
  |
2 | var iterableWithOptionalIterator: {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

